--- a/src/components/Banner.module.css
+++ b/src/components/Banner.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 96px 128px;
-  background-color: #fff7e9;
+  background-color: var(--navy);
 }
 @media (max-width: 768px) {
   .banner {
