--- a/src/pages/Edit.module.css
+++ b/src/pages/Edit.module.css
@@ -8,7 +8,7 @@
 .title {
   font-size: 36px;
   font-weight: bold;
-  color: #ff731d;
+  color: var(--navy);
 }
 
 .subtitle {
@@ -39,22 +39,27 @@
 }
 
 .formGroup input {
+  padding: 10px 16px;
   color: #7f8487;
+  border-radius: 8px;
   border: 1px solid #7f8487;
   font-size: 18px;
 }
 
 .formGroup button {
+  padding: 12px 16px;
   border: none;
-  background-color: #ff731d;
-  color: #fff;
+  border-radius: 4px;
+  border: none;
+  background-color: var(--blue);
+  color: var(--primary);
   font-size: 18px;
   font-weight: bold;
   cursor: pointer;
 }
 
 .formGroup button:hover {
-  background-color: #fa6a10;
+  background-color: var(--navy);
 }
 
 .formGroup button:disabled {
