--- a/src/pages/Create.module.css
+++ b/src/pages/Create.module.css
@@ -45,6 +45,11 @@
   font-size: 18px;
 }
 
+.formGroup input:focus {
+  border:2px solid var(--blue);
+  outline: none;
+}
+
 .formGroup button {
   padding: 12px 16px;
   border: none;
@@ -54,6 +59,7 @@
   font-size: 18px;
   font-weight: bold;
   cursor: pointer;
+  transition: 0.5s ease;
 }
 
 .formGroup button:hover {
