--- a/src/pages/Register.module.css
+++ b/src/pages/Register.module.css
@@ -45,6 +45,11 @@
     border-radius: 8px;
     font-size: 18px;
   }
+
+  .formGroup input:focus {
+    border:2px solid var(--blue);
+    outline: none;
+  }
   
   .formGroup button {
     padding: 12px 16px;
@@ -55,6 +60,7 @@
     font-size: 18px;
     font-weight: bold;
     cursor: pointer;
+    transition: 0.5s ease;
   }
   
   .formGroup button:hover {
